<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/LangButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_dir" />

        <Button
            android:id="@+id/InfoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_dir" />

        <ImageButton
            android:id="@+id/redButton"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            app:srcCompat="@drawable/red_button" />

        <Button
            android:id="@+id/CallButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_dir" />

        <Button
            android:id="@+id/TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_dir" />
    </LinearLayout>
</android.widget.RelativeLayout>