<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMedia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/hangup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hangup" />

        <Button
            android:id="@+id/addImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_image" />

        <EditText
            android:id="@+id/message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/media_hint"
            android:inputType="textCapSentences|textAutoCorrect"
            android:imeOptions="actionDone"/>

    </LinearLayout>
</android.widget.RelativeLayout>