<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="16dp">

        <EditText
            android:id="@+id/nameText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textCapSentences|textAutoCorrect"
            android:imeOptions="actionDone"/>
        <EditText
            android:id="@+id/genderText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textCapSentences|textAutoCorrect"
            android:imeOptions="actionDone"/>
        <EditText
            android:id="@+id/ageText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textCapSentences|textAutoCorrect"
            android:imeOptions="actionDone"/>
        <EditText
            android:id="@+id/heightText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textCapSentences|textAutoCorrect"
            android:imeOptions="actionDone"/>
        <EditText
            android:id="@+id/weightText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textCapSentences|textAutoCorrect"
            android:imeOptions="actionDone"/>

        <CheckBox
            android:id="@+id/LocationBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loc" />


        <Button
            android:id="@+id/NextButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next" />

    </LinearLayout>
</android.widget.RelativeLayout>